--- a/index.css
+++ b/index.css
@@ -1,7 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+*{
+    
+    font-family: 'Inter', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+
+.nav{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: black;
+    font-weight: 900;
+    text-align: center;
+    
+    
+}
+.nav-ul {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    
+}
+.links li,
+.nav-ul li {
+    display: inline-block;
+    align-items: center;
+    
+}
+.nav-ul li {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.nav-hover:hover {
+    /* text-decoration: underline; */
+    color: #ED661F;
+    border-bottom:#ED661F solid;
+    padding-bottom: 5px;
+}
+
+/* .links>li {
+    border: #ED661F 1px;
+} */
+
+.links,
+.nav-ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    
+    
+
+}
+.logo {
+    font-family: 'Inter', sans-serif;
+    font-size: 30px;
+    color: #FAFAFA;
+
+}
+.login li{
+    color: #FAFAFA;
+
+}
+.Buy-sell {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    background: url('Assets/grass.png');
+}
+
+
+.box-shadow {
+
+    border-radius: 0px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    width: 60%;
+    margin: auto;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+}
 .btn {
-    background-color: rgba(252, 114, 1, 0.87);
+    background-color: #ED661F;
     color: #FAFAFA;
     padding: 10px;
     border-radius: 5px;
