--- a/index.css
+++ b/index.css
@@ -170,3 +170,17 @@ a {
 .center {
     text-align: center;
 }
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-card {
+    width: 22%;
+}
+
+.card-img {
+    width: 100%;
+}
