--- a/index.css
+++ b/index.css
@@ -171,7 +171,7 @@ a {
     text-align: center;
 }
 
-.cards {
+.cards, .feedback-cards {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -181,8 +181,31 @@ a {
     width: 22%;
 }
 
+.customer-card {
+    width: 27%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.customer-txt {
+    font-weight: 800;
+    padding: 1em 0;
+    font-size: x-large;
+}
+
 .card-img {
     width: 100%;
+}
+
+.customer-img ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    font-size: large;
+}
+
+.profile-img {
+    margin-right: 2em;
 }
 
 .right-btn {
@@ -191,7 +214,14 @@ a {
     font-weight: 600;
     font-size: 1.6em;
     border-bottom: #ED661F solid 4px;
+    margin-top: 1em;
 }
 
+.divider {
+    height: 2em;
+    border-top: black 2px solid;
+    background: rgb(156, 156, 156);
+    margin-top: 6em;
+}
 
 
