--- a/index.css
+++ b/index.css
@@ -288,9 +288,22 @@ ul {
     width: 16%;
 }
 
+.Company ul li, .Products ul li, .Others ul li {
+    margin-bottom: 1.5em;
+}
+
 .footer-center {
     text-align: center;
     margin-bottom: 2em 0;
 }
+
+.icons {
+    color: #999;
+    display: flex;
+    margin-top: 2.5em;
+    width: 20%;
+    justify-content: space-between;
+}
+
 
 
