--- a/index.css
+++ b/index.css
@@ -184,6 +184,7 @@ a {
 .customer-card {
     width: 27%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    padding: 2em .8em;
 }
 
 .customer-txt {
@@ -220,8 +221,8 @@ a {
 
 .divider {
     height: 2em;
-    border-top: black 2px solid;
-    background: rgb(156, 156, 156);
+    border-top: rgb(29, 28, 28) 2px solid;
+    background: rgb(192, 192, 192);
     margin-top: 6em;
 }
 
@@ -305,5 +306,11 @@ ul {
     justify-content: space-between;
 }
 
+.stars {
+    color: #ED661F;
+}
 
+.gray-star {
+    color: #999;
+}
 
